# safelint

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  404.html  ADDING_AN_AI_CLIENT.md  ADDING_A_LANGUAGE.md  AI_CLIENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONFIGURATION.md  CONTRIBUTING.md  EXECUTION_PLAN.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  index.html  mkdocs.yml  pyproject.toml  ruff.toml  safelint.toml  sitemap.xml
.claude/skills/add-language-support/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml  claude-review.yml  docs.yml  publish.yml  sync-development.yml
ai-clients/: index.html
ai-clients/clients/aider/: index.html
ai-clients/clients/antigravity/: index.html
ai-clients/clients/claude-code/: index.html
ai-clients/clients/cline/: index.html
ai-clients/clients/codex/: index.html
ai-clients/clients/continue-dev/: index.html
ai-clients/clients/cursor/: index.html
ai-clients/clients/gemini/: index.html
ai-clients/clients/github-copilot/: index.html
ai-clients/clients/kiro/: index.html
ai-clients/clients/trae/: index.html
ai-clients/clients/warp/: index.html
ai-clients/clients/windsurf/: index.html
ai-clients/clients/zed/: index.html
ai-clients/lifecycle/: index.html
ai-clients/manual-install/: index.html
ai-clients/scope/: index.html
ai-clients/troubleshooting/: index.html
configuration/: index.html
configuration/cli/: index.html
configuration/rules/: index.html
configuration/suppression/: index.html
configuration/toml/: index.html
contributing/: index.html
contributing/adding-a-language/: index.html
contributing/adding-an-ai-client/: index.html
contributing/releasing/: index.html
docs/: JSON_SCHEMA.md  index.md  json-schema.md  power-of-ten.md  pre-commit.md
docs/ai-clients/: index.md  lifecycle.md  manual-install.md  scope.md  troubleshooting.md
docs/ai-clients/clients/: aider.md  antigravity.md  claude-code.md  cline.md  codex.md  continue-dev.md  cursor.md  gemini.md  github-copilot.md  kiro.md  trae.md  warp.md  windsurf.md  zed.md
docs/configuration/: cli.md  index.md  rules.md  suppression.md  toml.md
docs/contributing/: adding-a-language.md  adding-an-ai-client.md  releasing.md
docs/languages/: c.md  cpp.md  go.md  java.md  javascript.md  php.md  python.md  rust.md  typescript.md
examples/: .ai-safety.yaml  sample.pyproject.toml  sample.safelint.toml  sample.safelint.yaml
json-schema/: index.html
languages/c/: index.html
languages/cpp/: index.html
languages/go/: index.html
languages/java/: index.html
languages/javascript/: index.html
languages/php/: index.html
languages/python/: index.html
languages/rust/: index.html
languages/typescript/: index.html
plan/: 01-go.md  02-c.md  03-cpp.md  04-php.md  PENDING.md  README.md  c-audit-remediation.md  framework-presets.md  refactor-module-access-constants.md  refactor-node-type-constants.md  release-automation.md  security-hardening.md  taint-attribute-propagation.md
power-of-ten/: index.html
pre-commit/: index.html
project/changelog/: index.html
project/code-of-conduct/: index.html
project/security/: index.html
project/support/: index.html
scripts/: changelog_section.py  date_changelog.py  pre-pr.sh  prepare_docs.py
search/: search_index.json
skills/safelint/: README.md  SKILL.md
skills/safelint/languages/: python.md
src/safelint/: __init__.py  _rule_listing.py  _skill_install.py  cli.py
src/safelint/analysis/: __init__.py  dataflow.py  dataflow_c.py  dataflow_go.py  dataflow_java.py  dataflow_javascript.py  dataflow_php.py  dataflow_rust.py
src/safelint/core/: __init__.py  _cache.py  _diagnostics.py  _validators.py  config.py  engine.py  runner.py
src/safelint/formatters/: __init__.py  _json.py  _sarif.py
src/safelint/languages/: __init__.py  _node_utils.py  _types.py  c.py  cpp.py  go.py  java.py  javascript.py  php.py  python.py  rust.py  typescript.py
src/safelint/rules/: __init__.py  _rust_test_attribute.py  base.py  blanket_suppression.py  c_rules.py  complexity.py  cpp_rules.py  dataflow.py  documentation.py  error_handling.py  (+14 more)
tests/: conftest.py  test_branch_coverage.py  test_cli.py  test_config.py  test_coverage.py  test_dataflow.py  test_engine.py  test_list_rules.py  test_main_routing.py  test_release_scripts.py  test_skill_install.py  test_stdin.py  test_suppression.py
tests/analysis/: test_dataflow.py  test_dataflow_java.py
tests/core/: test_all_rules_smoke.py  test_cache.py  test_config.py  test_engine.py  test_engine_c.py  test_engine_cpp.py  test_engine_go.py  test_engine_javascript.py  test_engine_php.py  test_engine_typescript.py  test_framework_presets.py  test_java_framework_presets.py  test_javascript_runtime_presets.py  test_optional_grammars.py  test_suppression.py
tests/formatters/: test_formatters.py
tests/integration/: test_framework_presets_e2e.py  test_spring_boot_e2e.py
tests/rules/: test_blanket_suppression.py  test_c_power_of_ten_pin.py  test_c_rules.py  test_complexity_javascript.py  test_complexity_rust.py  test_cpp_rules.py  test_dataflow_c.py  test_dataflow_cpp.py  test_dataflow_go.py  test_dataflow_javascript.py  test_dataflow_php.py  test_dataflow_php_propagation.py  test_dataflow_rust.py  test_debug_mode_enabled.py  test_documentation_suppression_c.py  test_documentation_suppression_cpp.py  test_documentation_suppression_php.py  test_dynamic_code_execution.py  test_error_handling_cpp.py  test_error_handling_javascript.py  test_error_handling_php.py  test_function_length_javascript.py  test_function_length_rust.py  test_function_shape_c.py  test_function_shape_cpp.py  test_function_shape_go.py  test_function_shape_php.py  test_go_rules.py  test_interior_mutable_static.py  test_loop_safety_c.py  test_loop_safety_cpp.py  test_loop_safety_java.py  test_loop_safety_javascript.py  test_loop_safety_rust.py  test_mass_assignment.py  test_max_arguments_java.py  test_max_arguments_javascript.py  test_max_arguments_rust.py  test_missing_assertions_javascript.py  test_missing_assertions_rust.py  (+26 more)
(+41 files in other folders)
