[build-system]
requires = ["setuptools>=77.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "safelint"
version = "1.3.2"
description = "Engineering safety lint rules and pre-commit integration for modern Python codebases"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["lint", "pre-commit", "static-analysis", "safety", "python"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/shelkesays/safelint"
Repository = "https://github.com/shelkesays/safelint"
Issues = "https://github.com/shelkesays/safelint/issues"

[project.optional-dependencies]
# Legacy YAML config support (.safelint.yaml); not needed if using pyproject.toml
yaml = ["PyYAML>=6.0"]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.8",
    "ty>=0.0.26",
    "PyYAML>=6.0",  # needed to test YAML config loading in CI
]

[project.scripts]
safelint = "safelint.cli:main"

# ---------------------------------------------------------------------------
# setuptools - src layout
# ---------------------------------------------------------------------------
[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
safelint = ["py.typed"]

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:warnings --cov=src --cov-report=term-missing"
filterwarnings = [
    "ignore::DeprecationWarning",
]

# ---------------------------------------------------------------------------
# coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
branch = true
source = ["src", "tests"]

[tool.coverage.paths]
source = ["src"]

[tool.coverage.report]
fail_under = 80
precision = 2
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self\\.debug",
    "if settings\\.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "return NotImplemented",
    "if 0:",
    "if __name__ == .__main__.:",
    "except KeyboardInterrupt as err:",
]

# ---------------------------------------------------------------------------
# ruff - linter + formatter
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "D1"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D1"]  # test functions / fixtures don't require docstrings

[tool.ruff.lint.isort]
known-first-party = ["safelint"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

# ---------------------------------------------------------------------------
# ty - type checker (replaces mypy)
# Docs: https://docs.astral.sh/ty/
# ---------------------------------------------------------------------------
[tool.ty.environment]
python-version = "3.11"
root = ["src"]

[tool.ty.rules]
# Errors (must fix)
invalid-argument-type = "error"
invalid-return-type = "error"
invalid-assignment = "error"
invalid-attribute-access = "error"
call-non-callable = "error"
missing-argument = "error"
too-many-positional-arguments = "error"
invalid-type-arguments = "error"
unsupported-operator = "error"
division-by-zero = "error"

# Warnings (should fix, non-blocking)
redundant-cast = "warn"
unused-ignore-comment = "warn"
unused-type-ignore-comment = "warn"
possibly-unresolved-reference = "warn"
possibly-missing-attribute = "warn"
unresolved-import = "warn"
unresolved-attribute = "warn"

# ---------------------------------------------------------------------------
# safelint - safety lint configuration
# Configure safelint here instead of a separate .safelint.yaml file.
# All keys are optional; unset keys fall back to built-in defaults.
# ---------------------------------------------------------------------------
[tool.safelint]
mode = "local"    # "local" | "ci"
fail_on = "warning" # "error" | "warning"
exclude_paths = ["tests/**", "docs/**"]

[tool.safelint.execution]
fail_fast = false
order = [
    "function_length",
    "nesting_depth",
    "max_arguments",
    "bare_except",
    "empty_except",
    "global_state",
    "global_mutation",
    "unbounded_loops",
    "complexity",
    "side_effects_hidden",
    "side_effects",
    "logging_on_error",
    "resource_lifecycle",
    "test_coupling",
    "test_existence",
    "missing_assertions",
    "tainted_sink",
    "return_value_ignored",
    "null_dereference",
]

# ── Structural ────────────────────────────────────────────────────────────────
[tool.safelint.rules.function_length]
enabled = true
max_lines = 60
severity = "error"

[tool.safelint.rules.nesting_depth]
enabled = true
max_depth = 2
severity = "error"

[tool.safelint.rules.max_arguments]
enabled = true
max_args = 7
severity = "error"

[tool.safelint.rules.complexity]
enabled = true
max_complexity = 10
severity = "error"

# ── Error handling ────────────────────────────────────────────────────────────
[tool.safelint.rules.bare_except]
enabled = true
severity = "error"

[tool.safelint.rules.empty_except]
enabled = true
severity = "error"

[tool.safelint.rules.logging_on_error]
enabled = true
severity = "warning"

# ── State & purity ────────────────────────────────────────────────────────────
[tool.safelint.rules.global_state]
enabled = true
severity = "warning"

[tool.safelint.rules.global_mutation]
enabled = true
severity = "error"

[tool.safelint.rules.side_effects_hidden]
enabled = true
severity = "error"
io_functions = ["open", "print", "input", "subprocess"]
pure_prefixes = [
    "calculate", "compute", "get", "check", "validate",
    "is", "has", "find", "parse", "transform", "convert",
    "format", "build", "resolve", "detect",
]

[tool.safelint.rules.side_effects]
enabled = true
severity = "warning"
io_functions = ["open", "print", "input"]
io_name_keywords = [
    "print", "log", "write", "read", "save", "load",
    "send", "fetch", "export", "import",
]

# ── Resource safety ───────────────────────────────────────────────────────────
[tool.safelint.rules.resource_lifecycle]
enabled = true
severity = "error"
tracked_functions = ["open", "connect", "session"]
cleanup_patterns = ["close", "commit", "rollback"]

# ── Loop safety ───────────────────────────────────────────────────────────────
[tool.safelint.rules.unbounded_loops]
enabled = true
severity = "warning"

# ── Documentation (heuristic) ─────────────────────────────────────────────────
[tool.safelint.rules.missing_assertions]
enabled = false
severity = "warning"

# ── Test coverage (enable in CI) ──────────────────────────────────────────────
[tool.safelint.rules.test_existence]
enabled = false
test_dirs = ["tests"]
severity = "warning"

[tool.safelint.rules.test_coupling]
enabled = false
test_dirs = ["tests"]
severity = "warning"

# ── Dataflow hybrid rules (opt-in) ────────────────────────────────────────────
[tool.safelint.rules.tainted_sink]
enabled = false
severity = "error"
sinks = ["eval", "exec", "compile", "system", "popen", "Popen", "run", "call", "check_output", "execute"]
sanitizers = ["escape", "sanitize", "clean", "validate", "quote", "encode", "bleach"]
sources = ["input", "readline", "recv", "recvfrom", "read"]

[tool.safelint.rules.return_value_ignored]
enabled = false
severity = "warning"
flagged_calls = [
    "run", "call", "check_output",
    "write", "send", "sendall", "sendfile",
    "seek", "truncate",
    "remove", "unlink", "rename", "replace",
    "makedirs", "mkdir", "rmdir",
]

[tool.safelint.rules.null_dereference]
enabled = false
severity = "error"
nullable_methods = ["get", "pop", "find", "next", "first", "one_or_none", "scalar", "scalar_one_or_none", "fetchone"]

