[build-system]
requires = ["setuptools>=77.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "safelint"
version = "1.12.0"
description = "Engineering safety lint rules and pre-commit integration for modern Python codebases"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["lint", "pre-commit", "static-analysis", "safety", "python"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "tree-sitter>=0.23.0",
    "tree-sitter-python>=0.23.0",
]

[project.urls]
Homepage = "https://github.com/shelkesays/safelint"
Repository = "https://github.com/shelkesays/safelint"
Issues = "https://github.com/shelkesays/safelint/issues"

[project.optional-dependencies]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.8",
    "ty>=0.0.26",
]

[project.scripts]
safelint = "safelint.cli:main"

# ---------------------------------------------------------------------------
# setuptools - src layout
# ---------------------------------------------------------------------------
[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
safelint = ["py.typed", "skill_files/**/*.md", "skill_files/**/*.mdc"]

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:warnings --cov=src --cov-report=term-missing"
filterwarnings = [
    "ignore::DeprecationWarning",
]

# ---------------------------------------------------------------------------
# coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
branch = true
source = ["src", "tests"]

[tool.coverage.paths]
source = ["src"]

[tool.coverage.report]
# Coverage is at 97-98% currently. Reaching exactly 100% requires
# extensive ``# pragma: no cover`` annotations for genuinely
# fail-safe / fail-open defensive paths in the taint tracker and
# rule helpers (branches that fire only on malformed AST that
# Tree-sitter rarely produces). The current bar is set high enough
# to catch real coverage regressions; raise it as more pragmas
# are added or genuinely-testable branches get tests.
fail_under = 97
precision = 2
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self\\.debug",
    "if settings\\.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "return NotImplemented",
    "if 0:",
    "if __name__ == .__main__.:",
    "except KeyboardInterrupt as err:",
    # ``if TYPE_CHECKING:`` blocks only execute under type-checkers (mypy,
    # ty), never at runtime. They contain forward-declared imports used
    # for annotations only and are inherently uncoverable by unit tests.
    "if TYPE_CHECKING:",
    "if typing\\.TYPE_CHECKING:",
]
partial_branches = [
    "pragma: no branch",
    "if TYPE_CHECKING:",
]

# ---------------------------------------------------------------------------
# ty - type checker (replaces mypy)
# Docs: https://docs.astral.sh/ty/
# ---------------------------------------------------------------------------
[tool.ty.environment]
python-version = "3.11"
root = ["src"]

[tool.ty.rules]
# Errors (must fix)
invalid-argument-type = "error"
invalid-return-type = "error"
invalid-assignment = "error"
invalid-attribute-access = "error"
call-non-callable = "error"
missing-argument = "error"
too-many-positional-arguments = "error"
invalid-type-arguments = "error"
unsupported-operator = "error"
division-by-zero = "error"

# Warnings (should fix, non-blocking)
redundant-cast = "warn"
unused-ignore-comment = "warn"
unused-type-ignore-comment = "warn"
possibly-unresolved-reference = "warn"
possibly-missing-attribute = "warn"
unresolved-import = "warn"
unresolved-attribute = "warn"

[tool.uv.sources]
safelint = { workspace = true }

[dependency-groups]
dev = [
    "ruff>=0.15.12",
    "safelint",
    "ty>=0.0.34",
]
