[build-system]
requires = ["setuptools>=77.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "safelint"
version = "2.8.1"
description = "Engineering safety lint rules and pre-commit integration for modern Python, JavaScript, TypeScript, Java (with Spring Boot framework preset), Rust, Go, PHP, C, and C++ codebases"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["lint", "pre-commit", "static-analysis", "safety", "python", "javascript", "typescript", "java", "spring-boot", "rust", "go", "php", "c", "cpp", "c++"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
# Core runtime deps - only the engine itself. *Every* language ships
# as an opt-in extra under ``[project.optional-dependencies]`` below.
# This keeps the install minimal for projects that don't lint every
# supported language: a Python-only repo doesn't pay for the JS / TS
# grammars (~300 KB), a Go-only repo doesn't pay for the Python
# grammar (~150 KB), and so on as more languages land. ``pip install
# safelint`` alone installs the engine but no grammars - the CLI
# emits a clear install hint on first run.
dependencies = [
    "tree-sitter>=0.23.0",
]

[project.urls]
Homepage = "https://github.com/shelkesays/safelint"
Repository = "https://github.com/shelkesays/safelint"
Issues = "https://github.com/shelkesays/safelint/issues"

[project.optional-dependencies]
# Per-language grammar extras - opt in to whichever languages your
# project actually contains. Every language is its own extra; the base
# install ships no grammars at all. Pick one (or several) of:
#
#     pip install 'safelint[python]'        # adds .py, .pyw
#     pip install 'safelint[javascript]'    # adds .js, .mjs, .cjs
#     pip install 'safelint[typescript]'    # adds .ts, .tsx, .as (and JS, since
#                                           #   TS projects almost always have .js too)
#     pip install 'safelint[java]'          # adds .java (also has a Spring Boot framework preset)
#     pip install 'safelint[rust]'          # adds .rs
#     pip install 'safelint[go]'            # adds .go
#     pip install 'safelint[php]'           # adds .php
#     pip install 'safelint[c]'             # adds .c, .h
#     pip install 'safelint[cpp]'           # adds .cpp, .cxx, .cc, .hpp, .hxx, .hh
#     pip install 'safelint[all]'           # everything currently supported
#
# Multiple extras compose: ``pip install 'safelint[python,javascript]'``
# for a Python+JS monorepo, etc. As more languages land, each gets
# its own extra and is folded into ``[all]``.
python = [
    "tree-sitter-python>=0.23.0",
]
javascript = [
    "tree-sitter-javascript>=0.23.0",
]
# TypeScript bundles ``tree-sitter-javascript`` because almost every TS
# project also has ``.js`` files (vite/webpack/eslint configs, jest setup,
# generated declaration shims). The ~150 KB extra is worth the ergonomics -
# ``pip install 'safelint[typescript]'`` covers the typical TS-project shape
# without forcing users to write ``[javascript,typescript]``.
typescript = [
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
]
# Java ships with optional Spring Boot framework awareness via
# ``[tool.safelint.java] framework = "spring-boot"`` (default ``"vanilla"``).
# The preset replaces Java taint sinks (adds ``JdbcTemplate`` / ``RestTemplate``
# methods) and nullable-method defaults, and enables the four Spring-aware
# structural rules (SAFE901-904). It is *not* a separate grammar install -
# Spring code parses with the same ``tree-sitter-java`` grammar.
java = [
    "tree-sitter-java>=0.23.0",
]
# Rust support (new in v2.2.0). Memory safety is enforced by rustc +
# borrow checker, so safelint's rule scope on Rust is focused on the
# patterns rustc doesn't catch: function shape (length / nesting /
# complexity / args), error-handling discipline (empty Err arms,
# ignored Result returns, unlogged error branches), and dataflow
# patterns (unsanitised input into ``std::process::Command`` /
# ``sqlx::query`` / equivalents). v2.2.0 added ten Rust-only
# rules covering panic placement (SAFE204), lock poisoning (SAFE205),
# silent / unlogged Err handling (SAFE206 / SAFE207), broad
# ``.unwrap()`` outside tests (SAFE208), dangerous ``std::mem`` ops
# (SAFE306), truncating ``as`` casts (SAFE308), undocumented
# ``unsafe`` blocks (SAFE602), needless ``mut`` (SAFE110), and
# unchecked arithmetic on integer params (SAFE112); v2.4.0 adds an
# eleventh, interior-mutable statics (SAFE307).
rust = [
    "tree-sitter-rust>=0.23.0",
]
# Go support. Go's runtime and ``go vet`` catch a class of issues other
# languages leave to safelint, so the rule scope is shaped to Go idioms:
# function shape, ignored ``error`` returns (SAFE802), empty
# ``if err != nil {}`` bodies (the Go-only SAFE209), ``panic`` outside
# tests (the Go-only SAFE211), bare ``for {}`` loops, package-level
# ``var`` shared state (SAFE302), and dataflow into ``os/exec`` /
# ``database/sql`` / ``plugin`` sinks.
go = [
    "tree-sitter-go>=0.23.0",
]
# PHP support. PHP ports the largest share of the existing rule set of any
# language so far: try/catch error-handling (SAFE202 / SAFE203), the literal
# ``global`` keyword (SAFE301's first non-Python home), ``eval`` (SAFE309),
# superglobals (``$_GET`` / ``$_POST`` taint sources for SAFE801), and the
# ``@`` error-suppression operator (SAFE603's most literal target). The
# ``tree-sitter-php`` package exposes two grammars; safelint uses
# ``language_php()`` so mixed HTML+PHP templates parse (HTML arrives as inert
# ``text`` nodes the rules never match).
php = [
    "tree-sitter-php>=0.23.0",
]
c = [
    "tree-sitter-c>=0.23.0",
]
cpp = [
    "tree-sitter-cpp>=0.23.0",
]
# Convenience: every supported-language grammar in one install. Pin against
# this when you want safelint to lint anything you throw at it without
# thinking about per-language extras.
all = [
    "tree-sitter-python>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
    "tree-sitter-java>=0.23.0",
    "tree-sitter-rust>=0.23.0",
    "tree-sitter-go>=0.23.0",
    "tree-sitter-php>=0.23.0",
    "tree-sitter-c>=0.23.0",
    "tree-sitter-cpp>=0.23.0",
]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.8",
    "ty>=0.0.26",
    # Dev installs lint and test against every supported language.
    # Pull in the full grammar set via the ``[all]`` extra rather than
    # repeating the tree-sitter package list - single source of truth
    # for "every grammar"; adding a new language only edits ``[all]``.
    "safelint[all]",
]
# Documentation site - Material-themed MkDocs build that publishes to https://shelkesays.github.io/safelint/.
# Install with `uv sync --extra docs`, then `uv run mkdocs serve` for a live preview at http://127.0.0.1:8000.
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
]

[project.scripts]
safelint = "safelint.cli:main"

# ---------------------------------------------------------------------------
# setuptools - src layout
# ---------------------------------------------------------------------------
[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
safelint = ["py.typed", "skill_files/**/*.md", "skill_files/**/*.mdc"]

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:warnings --cov=src --cov-report=term-missing"
filterwarnings = [
    "ignore::DeprecationWarning",
]

# ---------------------------------------------------------------------------
# coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
branch = true
source = ["src", "tests"]

[tool.coverage.paths]
source = ["src"]

[tool.coverage.report]
# Coverage is at 97-98% currently. Reaching exactly 100% requires
# extensive ``# pragma: no cover`` annotations for genuinely
# fail-safe / fail-open defensive paths in the taint tracker and
# rule helpers (branches that fire only on malformed AST that
# Tree-sitter rarely produces). The current bar is set high enough
# to catch real coverage regressions; raise it as more pragmas
# are added or genuinely-testable branches get tests.
fail_under = 97
precision = 2
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self\\.debug",
    "if settings\\.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "return NotImplemented",
    "if 0:",
    "if __name__ == .__main__.:",
    "except KeyboardInterrupt as err:",
    # ``except ImportError:`` blocks that gracefully fall back to a
    # "feature unavailable" state when an optional dependency isn't
    # installed (see ``languages/{python,javascript,typescript}.py``).
    # The dev environment installs every optional dependency, so this
    # branch is genuinely unreachable in tests; behaviour is verified
    # via monkeypatching the resulting state.
    "except ImportError:",
    # ``if TYPE_CHECKING:`` blocks only execute under type-checkers (mypy,
    # ty), never at runtime. They contain forward-declared imports used
    # for annotations only and are inherently uncoverable by unit tests.
    "if TYPE_CHECKING:",
    "if typing\\.TYPE_CHECKING:",
]
partial_branches = [
    "pragma: no branch",
    "if TYPE_CHECKING:",
]

# ---------------------------------------------------------------------------
# ty - type checker (replaces mypy)
# Docs: https://docs.astral.sh/ty/
# ---------------------------------------------------------------------------
[tool.ty.environment]
python-version = "3.11"
root = ["src"]

[tool.ty.rules]
# Errors (must fix)
invalid-argument-type = "error"
invalid-return-type = "error"
invalid-assignment = "error"
invalid-attribute-access = "error"
call-non-callable = "error"
missing-argument = "error"
too-many-positional-arguments = "error"
invalid-type-arguments = "error"
unsupported-operator = "error"
division-by-zero = "error"

# Warnings (should fix, non-blocking)
redundant-cast = "warn"
unused-ignore-comment = "warn"
unused-type-ignore-comment = "warn"
possibly-unresolved-reference = "warn"
possibly-missing-attribute = "warn"
unresolved-import = "warn"
unresolved-attribute = "warn"

[tool.uv.sources]
safelint = { workspace = true }

[dependency-groups]
dev = [
    "ruff>=0.15.12",
    "safelint",
    "ty>=0.0.34",
]
